front end was created and finished

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <title>AskDoc</title>
   </head>
   <body>
+    <!-- Logo at the top -->
+    <div style="text-align: center; margin: 20px">
+      <img src="logo512.png" alt="AskDoc Logo" style="height: 80px" />
+    </div>
+
     <div id="root"></div>
     <script type="module" src="/src/App.js"></script>
   </body>
